--- a/index.html
+++ b/index.html
@@ -1099,7 +1099,7 @@
                     plugins: {
                         legend: {
                             labels: {
-                                color: 'var(--color-text-light)', // Legend text color
+                                color: '#ffffff', // Legend text color
                                 font: {
                                     size: 14
                                 }
